# the-lexicon

./: .gitignore  .scalafmt.conf  README.md  build.sbt
.github/actions/setup-scala/: action.yml
.github/workflows/: ci.yml  release.yml
hermes-grpc/src/main/protobuf/hermesmq/v1/: hermes.proto
messages/src/main/protobuf/codex/messages/v1/: catalog.proto  media.proto  tag.proto
messages/src/test/scala/codex/messages/v1/: JsonWireSpec.scala
openspec/: config.yaml
openspec/changes/add-hermes-grpc-contract/: design.md  tasks.md
openspec/changes/archive/2026-07-09-add-hermes-grpc-contract/: proposal.md  tasks.md
openspec/changes/archive/2026-07-09-add-hermes-grpc-contract/specs/hermes-grpc-contract/: spec.md
openspec/changes/design-lexicon/: design.md  proposal.md  tasks.md
openspec/changes/design-lexicon/specs/codegen-and-publishing/: spec.md
openspec/changes/design-lexicon/specs/message-contracts/: spec.md
openspec/changes/refactor-grpc-into-lexicon/: design.md  proposal.md  tasks.md
openspec/changes/refactor-grpc-into-lexicon/specs/codegen-and-publishing/: spec.md
openspec/changes/refactor-grpc-into-lexicon/specs/grpc-contracts/: spec.md
openspec/specs/hermes-grpc-contract/: spec.md
project/: plugins.sbt
python/: README.md  pyproject.toml
python/src/apollostorage/grpc/: object_api_pb2.py  object_api_pb2_grpc.py
python/src/codex/messages/v1/: catalog_pb2.py  media_pb2.py  tag_pb2.py
python/tests/: test_messages.py  test_stubs.py
src/main/protobuf/apollostorage/grpc/: object_api.proto
